--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					The Global Khazaana</a></h2>
 				<p>Our hampers are more than gifts — they are experiences, curated with love and wrapped with stories from every corner of the globe.</p>
 			</header>
-			<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+			<a href="#" class="image main"><img src="images/overlay.png" alt="" /></a>
 			<ul class="actions special">
 				<li><a href="#" class="button large">Discover Hampers</a></li>
 			</ul>
@@ -68,8 +68,7 @@
 			<article>
 				<header>
 					<span class="date">April 19, 2025</span>
-					<h2><a href="#">Flavors of India<br />
-						Hamper</a></h2>
+					<h2><a href="#">Flavors of India</a></h2>
 				</header>
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<p>A luxurious blend of regional delicacies and artisanal gifts celebrating the rich heritage of India.</p>
@@ -80,11 +79,10 @@
 			<article>
 				<header>
 					<span class="date">April 18, 2025</span>
-					<h2><a href="#">Zen Moments<br />
-						Hamper</a></h2>
+					<h2><a href="#">The Sattva Curation</a></h2>
 				</header>
 				<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-				<p>Inspired by Japanese minimalism — this hamper includes calming teas, incense, and beautiful handcrafted items.</p>
+				<p>Pure. Peaceful. Wholesome. A hamper designed with the principles of Ahimsa and Satvik living at its core — offering Jain-friendly treats from across India and the world, beautifully presented in an elegant, earthy palette.</p>
 				<ul class="actions special">
 					<li><a href="#" class="button">View Hamper</a></li>
 				</ul>
