Editing hamper Name

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 			<article>
 				<header>
 					<span class="date">April 19, 2025</span>
-					<h2><a href="#">Flavors of India</a></h2>
+					<h2><a href="#">Soul of India</a></h2>
 				</header>
 				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
 				<p>A luxurious blend of regional delicacies and artisanal gifts celebrating the rich heritage of India.</p>
