add hamper details and image

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
 					<span class="date">April 19, 2025</span>
 					<h2><a href="#">Soul of India</a></h2>
 				</header>
-				<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
-				<p>A luxurious blend of regional delicacies and artisanal gifts celebrating the rich heritage of India.</p>
+				<a href="#" class="image fit"><img src="images/india.png" alt="" /></a>
+				<p>A luxury hamper that takes you on a journey through India’s vibrant culture, blending heritage and modern craftsmanship. Perfect for gifting on any occasion—weddings, festivals, anniversaries, or just because!</p>
 				<ul class="actions special">
 					<li><a href="#" class="button">View Hamper</a></li>
 				</ul>
@@ -80,7 +80,7 @@
 					<span class="date">April 18, 2025</span>
 					<h2><a href="#">The Sattva Curation</a></h2>
 				</header>
-				<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+				<a href="#" class="image fit"><img src="images/sattva.png" alt="" /></a>
 				<p>Pure. Peaceful. Wholesome. A hamper designed with the principles of Ahimsa and Satvik living at its core — offering Jain-friendly treats from across India and the world, beautifully presented in an elegant, earthy palette.</p>
 				<ul class="actions special">
 					<li><a href="#" class="button">View Hamper</a></li>
