made some minor fixes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
 			<li><a href="ourstory.html">Our Story</a></li>
 		</ul>
 		<ul class="icons">
-			<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-			<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
+			<li><a href="https://www.instagram.com/theglobalkhazaana" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 		</ul>
 	</nav>
 
@@ -57,6 +56,9 @@
 				<p>Our hampers are more than gifts — they are experiences, curated with love and wrapped with stories from every corner of the globe.</p>
 			</header>
 			<a href="#" class="image main"><img src="images/overlay.png" alt="" /></a>
+			<ul class="actions special">
+				<li><a href="#" class="button large">Discover Hampers</a></li>
+			</ul>
 		</article>
 
 		<!-- Posts -->
@@ -79,31 +81,18 @@
 			</article>
 			<!-- Add more hampers as needed -->
 		</section>
+
+		<!-- Footer -->
+		<footer>
+			<div class="pagination">
+				<p>To order, please dm us on instagram @theglobalkhazaana</p>
+			</div>
+		</footer>
+
 	</div>
 
 	<!-- Footer -->
 	<footer id="footer">
-		<section>
-			<form method="post" action="#">
-				<div class="fields">
-					<div class="field">
-						<label for="name">Name</label>
-						<input type="text" name="name" id="name" />
-					</div>
-					<div class="field">
-						<label for="email">Email</label>
-						<input type="text" name="email" id="email" />
-					</div>
-					<div class="field">
-						<label for="message">Message</label>
-						<textarea name="message" id="message" rows="3"></textarea>
-					</div>
-				</div>
-				<ul class="actions">
-					<li><input type="submit" value="Send Message" /></li>
-				</ul>
-			</form>
-		</section>
 		<section class="split contact">
 			<section class="alt">
 				<h3>Location</h3>
