change overlay image

--- a/ourstory.html
+++ b/ourstory.html
@@ -43,7 +43,7 @@
 									<h1>Our Story</h1>
 									<p>Rooted in Passion. Crafted with Purpose.</p>
 								</header>
-								<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
+								<div class="image main"><img src="images/tgk.JPG" alt="" /></div>
 								<p>The Global Khazaana is more than just a luxury gifting brand — it’s the culmination of a lifelong journey of creativity, passion, and entrepreneurial spirit.</p>
 								<p>Our founder has always had an eye for beauty, detail, and the joy of creating something meaningful. A homemaker by role, but a creator by heart, she’s spent years exploring different crafts and ventures — from fashion design to artisan cake and chocolate making, from curating personalized hampers to experimenting with new ideas from home. Every venture carried one thing in common: the deep desire to bring joy to others through thoughtful, handmade experiences.</p>
 								<p>Over the years, what began as small home-based hamper creations blossomed into a trusted name among friends, family, and loyal clients. The Global Khazaana is her leap of faith — a dream to take these handcrafted treasures beyond the living room, and into homes across India and the world.</p>
