--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 					The Global Khazaana</a></h2>
 				<p>Our hampers are more than gifts — they are experiences, curated with love and wrapped with stories from every corner of the globe.</p>
 			</header>
-			<a href="#" class="image main"><img src="images/tgk.JPG" alt="" /></a>
+			<a href="#" class="image main"><img src="images/overlay.png" alt="" /></a>
 			<p>Introducing The Global Khazaana — a luxury hamper brand inspired by the rich cultures, flavors, and craftsmanship from every corner of the Earth.
 				From Parisian delicacies to Rajasthani opulence, our hampers are curated stories you can hold, gift, and celebrate. 🎁✨
 
